--- a/kubernetes/apps/default/authentik/authentik.yaml
+++ b/kubernetes/apps/default/authentik/authentik.yaml
@@ -42,7 +42,7 @@ spec:
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
           nginx.ingress.kubernetes.io/service-upstream: "false"
-        ingressClassName: cilium
+        ingressClassName: internal
         hosts: &hosts
           - authentik.internal.${SECRET_DOMAIN}
         paths:
