--- a/kubernetes/apps/default/rocketchat/rocket-chat.yaml
+++ b/kubernetes/apps/default/rocketchat/rocket-chat.yaml
@@ -29,7 +29,7 @@ spec:
       size: 8Gi
     ingress:
       enabled: true
-      ingressClassName: cilium
+      ingressClassName: internal
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
       tls:
