--- a/kubernetes/apps/default/tautulli/tautulli.yaml
+++ b/kubernetes/apps/default/tautulli/tautulli.yaml
@@ -57,7 +57,7 @@ spec:
       tautulli:
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
-        className: cilium
+        className: internal
         enabled: true
         hosts:
           - host: tautulli.internal.${SECRET_DOMAIN}
