--- a/kubernetes/apps/default/homepage/homepage.yaml
+++ b/kubernetes/apps/default/homepage/homepage.yaml
@@ -55,7 +55,7 @@ spec:
           nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
           nginx.ingress.kubernetes.io/otel-service-name: homepage
           nginx.ingress.kubernetes.io/service-upstream: "false"
-        className: cilium
+        className: internal
         enabled: true
         hosts:
           - host: homepage.internal.${SECRET_DOMAIN}
