--- a/kubernetes/apps/default/influx/influxdb-ingress.yaml
+++ b/kubernetes/apps/default/influx/influxdb-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt-production
     nginx.ingress.kubernetes.io/service-upstream: "false"
 spec:
-  ingressClassName: cilium
+  ingressClassName: internal
   rules:
     - host: &host influx.internal.${SECRET_DOMAIN}
       http:
