--- a/kubernetes/apps/default/jackett/jackett.yaml
+++ b/kubernetes/apps/default/jackett/jackett.yaml
@@ -24,7 +24,7 @@ spec:
     ingress:
       main:
         enabled: true
-        ingressClassName: cilium
+        ingressClassName: internal
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
           hajimari.io/enable: "true"
