--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -106,7 +106,7 @@ spec:
           nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
           nginx.ingress.kubernetes.io/otel-service-name: radarr
           nginx.ingress.kubernetes.io/service-upstream: "false"
-        className: cilium
+        className: internal
         enabled: true
         hosts:
           - host: radarr.internal.${SECRET_DOMAIN}
