--- a/kubernetes/apps/default/sonarr-anime/sonarr-anime.yaml
+++ b/kubernetes/apps/default/sonarr-anime/sonarr-anime.yaml
@@ -75,7 +75,7 @@ spec:
           nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
           nginx.ingress.kubernetes.io/otel-service-name: sonarr-anime
           nginx.ingress.kubernetes.io/service-upstream: "false"
-        className: cilium
+        className: internal
         enabled: true
         hosts:
           - host: sonarr-anime.internal.${SECRET_DOMAIN}
