--- a/kubernetes/apps/default/sonarr/sonarr.yaml
+++ b/kubernetes/apps/default/sonarr/sonarr.yaml
@@ -86,7 +86,7 @@ spec:
           nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
           nginx.ingress.kubernetes.io/otel-service-name: sonarr
           nginx.ingress.kubernetes.io/service-upstream: "false"
-        className: cilium
+        className: internal
         enabled: true
         hosts:
           - host: sonarr.internal.${SECRET_DOMAIN}
