--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -62,7 +62,7 @@ spec:
         rollOutPods: true
         ingress:
           enabled: true
-          className: cilium
+          className: internal
           annotations:
             cert-manager.io/cluster-issuer: letsencrypt-production
           hosts: [ "hubble.internal.${SECRET_DOMAIN}" ]
