--- a/kubernetes/apps/default/glances/config.yaml
+++ b/kubernetes/apps/default/glances/config.yaml
@@ -5,3 +5,114 @@ metadata:
   namespace: default
 data:
   glance.yaml: |
+    server:
+      assets-path: /app/assets
+    branding:
+      custom-footer: |
+        <p>Mera Khabar, Mera Prayogashaala.</p>
+      logo-text:
+
+    theme:
+      background-color: 0 0 15
+      primary-color: 220 13 91
+      contrast-multiplier: 1.1
+
+    pages:
+      - name: Khabar
+        show-mobile-header: true
+        columns:
+          - size: small
+            widgets:
+              - type: calendar
+              - type: weather
+                location: Pune, India
+                units: metric
+                hour-format: 12h
+              - type: lobsters
+                cache: 6h
+                sort-by: hot
+                tags:
+                  - linux
+                  - android
+                  - css
+                  - javascript
+                  - ai
+                  - hardware
+                  - web
+                  - privacy
+                  - vcs
+                limit: 20
+                collapse-after: 5
+
+          - size: full
+            widgets:
+              - type: search
+                search-engine: https://s.domain.com/search?q={QUERY}
+              - type: videos
+                limit: 100
+                style: grid-cards
+                collapse-after-rows: 2
+                video-url-template: https://yt.domain.com/watch?v={VIDEO-ID}
+                channels:
+                  - UCwqusr8YDwM-3mEYTDeJHzw # Republic TV
+                  - UCYPvAwZP8pZhSMW8qs7cVCw # India Today
+                  - UCIvaYmXn910QMdemBG3v1pQ # Zee News
+                  - UCXIJgqnII2ZOINSWNOGFThA # Fox News
+                  - UC5O114-PQNYkurlTg6hekZw # United Nations
+                  - UCGTUbwceCMibvpbd2NaIP7A # The Weather Channel
+                  - UCYxRlFDqcWM4y7FfpiAN3KQ # The White House
+              - type: rss
+                cache: 61m
+                style: detailed-list
+                collapse-after: 20
+                limit: 200
+                title: News
+                feeds:
+                  - url: https://www.republicworld.com/rss/latest.xml
+                    title: Republic World
+                  - url: https://www.indiatoday.in/rss/home
+                    title: India Today
+                  - url: https://zeenews.india.com/rss/india-national-news.xml
+                    title: Zee News
+                  - url: https://moxie.foxnews.com/google-publisher/latest.xml
+                    title: Fox News
+                  - url: https://www.nasa.gov/news-release/feed/
+                    title: NASA Releases
+                  - url: https://www.nasa.gov/feeds/iotd-feed/
+                    title: NASA Image Of The Day
+                  - url: https://rsshub.app/reuters/world/us
+                    title: Reuters World News
+
+          - size: small
+            widgets:
+              - type: clock
+                hour-format: 24h
+                timezones:
+                  - timezone: America/Chicago
+                    label: Chicago
+                  - timezone: America/Los_Angeles
+                    label: Los Angeles
+                  - timezone: Asia/Kolkata
+                    label: New Delhi
+              - type: reddit
+                cache: 2h
+                subreddit: worldnews
+                sort-by: top
+                top-period: day
+                limit: 25
+                collapse-after: 5
+              - type: reddit
+                cache: 12h
+                subreddit: indiaspeaks
+                sort-by: top
+                top-period: day
+                limit: 25
+                collapse-after: 5
+      - name: Prayogashaala
+        slug: prayogashaala
+        columns:
+          - size: full
+            widgets:
+              - type: iframe
+                source: https://domain.com
+                height: 800
