--- a/kubernetes/apps/default/glances/glances.yaml
+++ b/kubernetes/apps/default/glances/glances.yaml
@@ -56,6 +56,7 @@ spec:
                 pathType: Prefix
                 service:
                   name: *app
+                  port: 8080
         tls:
           - secretName: glances-tls
             hosts:
@@ -64,12 +65,7 @@ spec:
       app:
         enabled: true
         type: configMap
-        advancedMounts:
-          main:
-            glances:
-              - path: /app/glance.yml
-                readOnly: false
-                subPath: glance.yml
+        name: glances-config
     rbac:
       roles:
         glance-role:
