--- a/kubernetes/apps/default/glances/glances.yaml
+++ b/kubernetes/apps/default/glances/glances.yaml
@@ -36,7 +36,7 @@ spec:
     service:
       *app:
         enabled: true
-        controller: *app
+        controller: main
         primary: true
         ports:
           http:
