--- a/kubernetes/apps/default/glances/glances.yaml
+++ b/kubernetes/apps/default/glances/glances.yaml
@@ -31,6 +31,8 @@ spec:
             image:
               repository: glanceapp/glance
               tag: v0.6.2
+            args:
+              - --config /config/glance.yml
     serviceAccount:
       create: true
     service:
@@ -62,7 +64,7 @@ spec:
             hosts:
               - *host
     persistence:
-      app:
+      config:
         enabled: true
         type: configMap
         name: glances-config
