--- a/kubernetes/apps/default/glances/glances.yaml
+++ b/kubernetes/apps/default/glances/glances.yaml
@@ -74,6 +74,7 @@ spec:
             glances:
               - path: /config
                 readOnly: true
+                subPath: glance.yml
     rbac:
       roles:
         glance-role:
