--- a/kubernetes/apps/default/glances/config.yaml
+++ b/kubernetes/apps/default/glances/config.yaml
@@ -4,7 +4,7 @@ metadata:
   name: glances-config
   namespace: default
 data:
-  glance.yaml: |
+  glance.yml: |
     server:
       assets-path: /app/assets
     branding:
