--- a/kubernetes/apps/default/glances/glances.yaml
+++ b/kubernetes/apps/default/glances/glances.yaml
@@ -73,8 +73,7 @@ spec:
           main:
             glances:
               - path: /config
-                readOnly: true
-                subPath: glance.yml
+                readOnly: false
     rbac:
       roles:
         glance-role:
