--- a/kubernetes/apps/default/glances/config.yaml
+++ b/kubernetes/apps/default/glances/config.yaml
@@ -10,6 +10,12 @@ data:
         columns:
           - size: small
             widgets:
+              - type: search
+                search-engine: duckduckgo
+                bangs:
+                  - title: YouTube
+                    shortcut: "!yt"
+                    url: https://www.youtube.com/results?search_query={QUERY}
               - type: calendar
 
               - type: rss
