--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -7,6 +7,7 @@ stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:ru6oDYUPYIeCQ7c=,iv:Aqv2brPEFxn7y0Wj2ZIlc++AuMBIh9zfUoxLetLbCRM=,tag:YG0gp8S5pmv/AMDw4hostQ==,type:str]
     SECRET_ACME_EMAIL: ENC[AES256_GCM,data:usil3sp+JgRTFm6vmi5KxsG5WWYVAA==,iv:oz1ovZxibeK8pM2S0tWAMN0N7Q8LYTQsWtdv5twQaZY=,tag:DxKny/lhg7vOkq9j3g7KWQ==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:LroQo1OunII/LBERDGelZTo4qz460mI+oEGJLT+JPccM3W+y,iv:8Wk1a6Obl70uVXMOJg4AokImv5EhRDTJ+I78Co7Yg18=,tag:o2Pbp0s/KZfpQAerzUpm9g==,type:str]
+    SECRET_LOCATION: ENC[AES256_GCM,data:zZgCGGZJQ80Vjd62dNmRiieTREy/3gQQ,iv:EYipqAsOqB4Rsi6oPogYzbneEsllKqHsYcXui2TWJq0=,tag:+1pkYySDhsl/ijjIkZYJIw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +23,8 @@ sops:
             ZVZ5eW1MZ0VHdWtNblJuNmJJaWpTbm8K/a91I6SMwfgm2qJ0TIbVlKEjMcF60zdh
             FAb/nJZOQKBsqDfrVdGMYruhMLKeoJt+xo5dFyTbZkdnyHGtazRX1w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T20:39:17Z"
-    mac: ENC[AES256_GCM,data:SmYQtmGJu+eb20w8wFvWuHhC1rSjb9oJnug9jIVZyw725HUGDnaLflKeaz/AyxTLQwG6GBrp1dInRnJmsUIct0HelzHt561xjLLIC8kxc8whWuHBSkzIwsjv/FZ90qcSaUewxRFQV5Tm03+q5xN49RVkED1xJoFpcEBhd2azYX0=,iv:NJ1xRoQDSr/l466FfiOur4ULtka6RFJsinAVRViSm1s=,tag:5VXVbStY8+9ToTFGfi1Mag==,type:str]
+    lastmodified: "2024-11-13T19:31:31Z"
+    mac: ENC[AES256_GCM,data:XuYP46WLcHwYZ1ot/DLdlUYfP0U68eta0Rbge0l3Ku0eYxlTSl9TJuQ+MZIJCOCAFxHO3wc6ZJC/OSE2PhR4CmX+Z2I0Clx6J7x2kYh75eB7QSYpPTvwjw2bC0D4IZIJH6Ox8XqrhFZJWD41gJ9ZOPCuFOj7qAje5luMVdET2fM=,iv:sBYF9lm57WbqsHWbAirQ92ZsQiQ6+1605//qLKYW5iw=,tag:0Xu1y3m0m49pI6hPqSukOg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
