--- a/kubernetes/apps/default/glances/config.yaml
+++ b/kubernetes/apps/default/glances/config.yaml
@@ -10,30 +10,7 @@ data:
         columns:
           - size: small
             widgets:
-
               - type: calendar
-
-              - type: rss
-                limit: 10
-                collapse-after: 3
-                cache: 3h
-                feeds:
-                  - url: https://ciechanow.ski/atom.xml
-                  - url: https://www.joshwcomeau.com/rss.xml
-                    title: Josh Comeau
-                  - url: https://samwho.dev/rss.xml
-                  - url: https://awesomekling.github.io/feed.xml
-                  - url: https://ishadeed.com/feed.xml
-                    title: Ahmad Shadeed
-
-              - type: twitch-channels
-                channels:
-                  - theprimeagen
-                  - cohhcarnage
-                  - christitustech
-                  - blurbs
-                  - asmongold
-                  - jembawls
 
           - size: full
             widgets:
@@ -43,37 +20,14 @@ data:
                   - title: YouTube
                     shortcut: "!yt"
                     url: https://www.youtube.com/results?search_query={QUERY}
-              - type: hacker-news
-
               - type: videos
                 channels:
-                  - UCR-DXc1voovS8nhAvccRZhg # Jeff Geerling
-                  - UCv6J_jJa8GJqFwQNgNrMuww # ServeTheHome
-                  - UCOk-gHyjcWZNj3Br4oxwh0A # Techno Tim
-
+                  - UC1D3yD4wlPMico0dss264XA # NileBlue
+                  - UC7_YxT-KID8kRbqZo7MyscQ # Markiplier
               - type: reddit
                 subreddit: selfhosted
 
           - size: small
             widgets:
               - type: weather
-                location: London, United Kingdom
-
-              - type: markets
-                markets:
-                  - symbol: SPY
-                    name: S&P 500
-                  - symbol: BTC-USD
-                    name: Bitcoin
-                  - symbol: NVDA
-                    name: NVIDIA
-                  - symbol: AAPL
-                    name: Apple
-                  - symbol: MSFT
-                    name: Microsoft
-                  - symbol: GOOGL
-                    name: Google
-                  - symbol: AMD
-                    name: AMD
-                  - symbol: RDDT
-                    name: Reddit
+                location: ${SECRET_LOCATION}
