--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -31,9 +31,10 @@ resources:
   - ./onechart.yaml
 #  - ./authentik.yaml
 #  - ./kubeshark.yaml
-  - ./rocket-chat.yaml
+#  - ./rocket-chat.yaml
   - ./robusta.yaml
 #  - ./mailu.yaml
   - ./csi-driver-nfs.yaml
   - ./kubeflame.yaml
   - ./checkmk.yaml
+  - ./budibase.yaml
