--- a/kubernetes/apps/default/glances/config.yaml
+++ b/kubernetes/apps/default/glances/config.yaml
@@ -12,35 +12,24 @@ data:
             widgets:
               - type: bookmarks
                 groups:
-                  - links:
-                      - title: Gmail
-                        url: https://mail.google.com/mail/u/0/
-                      - title: Amazon
-                        url: https://www.amazon.com/
-                      - title: Github
-                        url: https://github.com/
-                      - title: Wikipedia
-                        url: https://en.wikipedia.org/
+                  - title: Services
+                    links:
+                      - title: Proxmox
+                        url: https://proxmox.stiforr.com
+                      - title: OPNSense
+                        url: https://opnsense.stiforr.com
                   - title: Entertainment
                     color: 10 70 50
                     links:
                       - title: Netflix
                         url: https://www.netflix.com/
-                      - title: Disney+
-                        url: https://www.disneyplus.com/
                       - title: YouTube
                         url: https://www.youtube.com/
-                      - title: Prime Video
-                        url: https://www.primevideo.com/
                   - title: Social
                     color: 200 50 50
                     links:
                       - title: Reddit
                         url: https://www.reddit.com/
-                      - title: Twitter
-                        url: https://twitter.com/
-                      - title: Instagram
-                        url: https://www.instagram.com/
               - type: calendar
 
           - size: full
