--- a/kubernetes/apps/default/homepage/settings-cm.yaml
+++ b/kubernetes/apps/default/homepage/settings-cm.yaml
@@ -3,10 +3,13 @@ kind: ConfigMap
 metadata:
   name: home-settings
   namespace: default
+  labels:
+    app.kubernetes.io/name: homepage
 data:
   bookmarks.yaml: ""
   docker.yaml: ""
-  kubernetes.yaml: ""
+  kubernetes.yaml: |
+    mode: cluster
   services.yaml: ""
   settings.yaml: |
     title: Home
