--- a/kubernetes/apps/default/homepage/homepage.yaml
+++ b/kubernetes/apps/default/homepage/homepage.yaml
@@ -68,7 +68,7 @@ spec:
     persistence:
       config:
         type: configMap
-        name: homepage-config
+        name: home-settings
         globalMounts:
           - subPath: bookmarks.yaml
             path: /app/config/bookmarks.yaml
