--- a/kubernetes/apps/default/homepage/homepage.yaml
+++ b/kubernetes/apps/default/homepage/homepage.yaml
@@ -14,6 +14,12 @@ spec:
         name: bjw-s
         namespace: flux-system
       version: 3.5.1
+  upgrade:
+    remediation:
+      retries: 5
+  install:
+    remediation:
+      retries: 5
   interval: 12h0m0s
   releaseName: homepage
   targetNamespace: default
