--- a/kubernetes/apps/default/homepage/homepage.yaml
+++ b/kubernetes/apps/default/homepage/homepage.yaml
@@ -70,16 +70,22 @@ spec:
         globalMounts:
           - subPath: bookmarks.yaml
             path: /app/config/bookmarks.yaml
+            readOnly: false
           - subPath: docker.yaml
             path: /app/config/docker.yaml
+            readOnly: false
           - subPath: kubernetes.yaml
             path: /app/config/kubernetes.yaml
+            readOnly: false
           - subPath: services.yaml
             path: /app/config/services.yaml
+            readOnly: false
           - subPath: settings.yaml
             path: /app/config/settings.yaml
+            readOnly: false
           - subPath: widgets.yaml
             path: /app/config/widgets.yaml
+            readOnly: false
     service:
       homepage:
         controller: main
