--- a/kubernetes/apps/default/homepage/homepage.yaml
+++ b/kubernetes/apps/default/homepage/homepage.yaml
@@ -65,26 +65,12 @@ spec:
             secretName: homepage-tls
     persistence:
       config:
-        type: configMap
+        type: persistentVolumeClaim
+        storageClass: nfs-client-ssd
+        size: 1Gi
         name: home-settings
         globalMounts:
-          - subPath: bookmarks.yaml
-            path: /app/config/bookmarks.yaml
-            readOnly: false
-          - subPath: docker.yaml
-            path: /app/config/docker.yaml
-            readOnly: false
-          - subPath: kubernetes.yaml
-            path: /app/config/kubernetes.yaml
-            readOnly: false
-          - subPath: services.yaml
-            path: /app/config/services.yaml
-            readOnly: false
-          - subPath: settings.yaml
-            path: /app/config/settings.yaml
-            readOnly: false
-          - subPath: widgets.yaml
-            path: /app/config/widgets.yaml
+          - path: /app/config
             readOnly: false
     service:
       homepage:
