--- a/.taskfiles/bootstrap/Taskfile.yaml
+++ b/.taskfiles/bootstrap/Taskfile.yaml
@@ -90,7 +90,7 @@ tasks:
         sh: test -f {{.BOOTSTRAP_CONFIG_FILE}}
 
   secrets:
-    internal: true
+    internal: false
     cmds:
       - for: { var: SECRET_FILES }
         cmd: |
