--- a/kubernetes/bootstrap/talos/talconfig.yaml
+++ b/kubernetes/bootstrap/talos/talconfig.yaml
@@ -6,13 +6,13 @@ talosVersion: v1.8.3
 kubernetesVersion: v1.31.2
 
 clusterName: "home-kubernetes"
-endpoint: https://192.168.2.201:6443
+endpoint: https://192.168.1.2:6443
 clusterPodNets:
   - "10.69.0.0/16"
 clusterSvcNets:
   - "10.96.0.0/16"
 additionalApiServerCertSans: &sans
-  - "192.168.2.201"
+  - "192.168.1.2"
   - 127.0.0.1 # KubePrism
 additionalMachineCertSans: *sans
 
@@ -22,41 +22,47 @@ cniConfig:
 
 nodes:
   - hostname: "controller"
-    ipAddress: "192.168.2.11"
+    ipAddress: "192.168.1.11"
     installDisk: "/dev/sda"
-    talosImageURL: factory.talos.dev/installer/ce4c980550dd2ab1b17bbf2b08801c7eb59418eafe8f279833297925d67c7515
+    talosImageURL: factory.talos.dev/installer/7d4c31cbd96db9f90c874990697c523482b2bae27fb4631d5583dcd9c281b1ff
     controlPlane: true
     networkInterfaces:
       - deviceSelector:
           hardwareAddr: "bc:24:11:eb:3a:9a"
         dhcp: false
         addresses:
-          - "192.168.2.11/24"
+          - "192.168.1.11/24"
         routes:
           - network: 0.0.0.0/0
-            gateway: "192.168.2.1"
+            gateway: "192.168.1.254"
         mtu: 1500
         vip:
-          ip: "192.168.2.201"
+          ip: "192.168.1.2"
+    extensionServices:
+      - name: tailscale
+        configFiles:
+        environment:
+          - TS_AUTHKEY=${TS_AUTHKEY}
+          - TS_ROUTES=${TS_ROUTES}
     patches:
       - "@./patches/controller/api-access.yaml"
       - "@./patches/controller/cluster.yaml"
       - "@./patches/controller/disable-admission-controller.yaml"
       - "@./patches/controller/etcd.yaml"
   - hostname: "worker"
-    ipAddress: "192.168.2.12"
+    ipAddress: "192.168.1.12"
     installDisk: "/dev/sda"
-    talosImageURL: factory.talos.dev/installer/ce4c980550dd2ab1b17bbf2b08801c7eb59418eafe8f279833297925d67c7515
+    talosImageURL: factory.talos.dev/installer/7d4c31cbd96db9f90c874990697c523482b2bae27fb4631d5583dcd9c281b1ff
     controlPlane: false
     networkInterfaces:
       - deviceSelector:
           hardwareAddr: "bc:24:11:eb:34:34"
         dhcp: false
         addresses:
-          - "192.168.2.12/24"
+          - "192.168.1.12/24"
         routes:
           - network: 0.0.0.0/0
-            gateway: "192.168.2.1"
+            gateway: "192.168.1.254"
         mtu: 1500
 
 # Global patches
