--- a/kubernetes/apps/default/rocketchat/rocket-chat.yaml
+++ b/kubernetes/apps/default/rocketchat/rocket-chat.yaml
@@ -25,7 +25,7 @@ spec:
     host: &host chat.internal.${SECRET_DOMAIN}
     persistence:
       enabled: true
-      storageClass: nfs-csi
+      storageClass: nfs-client-ssd
       size: 8Gi
     ingress:
       enabled: true
@@ -38,7 +38,7 @@ spec:
             - *host
     mongodb:
       persistence:
-        storageClass: nfs-csi
+        storageClass: nfs-client-ssd
         size: 8Gi
       auth:
         usernames: [ rocketchat ]
