--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,10 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:ru6oDYUPYIeCQ7c=,iv:Aqv2brPEFxn7y0Wj2ZIlc++AuMBIh9zfUoxLetLbCRM=,tag:YG0gp8S5pmv/AMDw4hostQ==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:usil3sp+JgRTFm6vmi5KxsG5WWYVAA==,iv:oz1ovZxibeK8pM2S0tWAMN0N7Q8LYTQsWtdv5twQaZY=,tag:DxKny/lhg7vOkq9j3g7KWQ==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:LroQo1OunII/LBERDGelZTo4qz460mI+oEGJLT+JPccM3W+y,iv:8Wk1a6Obl70uVXMOJg4AokImv5EhRDTJ+I78Co7Yg18=,tag:o2Pbp0s/KZfpQAerzUpm9g==,type:str]
-    SECRET_LOCATION: ENC[AES256_GCM,data:zZgCGGZJQ80Vjd62dNmRiieTREy/3gQQ,iv:EYipqAsOqB4Rsi6oPogYzbneEsllKqHsYcXui2TWJq0=,tag:+1pkYySDhsl/ijjIkZYJIw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:lxbHXifC+Sd+PRs=,iv:vOPIQWa0kyy22Z8KgMyIxVtvkNuzZWvoWszPAU4FesQ=,tag:rFxTVfnnCd8grY3ylDzDAw==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:8jHvAM/6+wsk15kO2KTvVuiCn13lOA==,iv:4vc2L75RP3semetHes7nTWgiEP3X9ZrbNLdLJx57Qj8=,tag:j3WJcvC0Tzn7SsMwriqCyQ==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:OeH5g3qqLL8Z3ZEW5CRTWBN9NNUEZririljnxanAKuGfpeho,iv:M7Fv1juOeCUt4AbuK7gEbjV0n3jULeV30WVh/9PLdWg=,tag:Ov39AyAEu88orJIOUevvxA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +16,14 @@ sops:
         - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2b2dYaWxMbmd5eEF1RXp2
-            TkVuQ1lxRUhjNDk1WlBEWXMzQ0ZJSTRiYnlVCmpNTE1OWW9tVDkzVUtIWFpBUUVK
-            NjdSTXJpQkFJTmtjNERtcHpRbnFlMGMKLS0tIEpzT1ZCWVBBWURubmhZZXZTeEdM
-            ZVZ5eW1MZ0VHdWtNblJuNmJJaWpTbm8K/a91I6SMwfgm2qJ0TIbVlKEjMcF60zdh
-            FAb/nJZOQKBsqDfrVdGMYruhMLKeoJt+xo5dFyTbZkdnyHGtazRX1w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUbU0veWE2dlBENVlCaVhR
+            d2JaOXM2MHd0d1VOM0xEVng3dGd6TmtSaGlRCnJiczU3NE1UVlBBVjdmNWJHQi9Z
+            SVF1RkdUNjdmOENWSlQ1empwTERQRnMKLS0tIGFXQnhLeUNUMi9sYlF3TTR2ZXJp
+            OTl4eFNwQmRUb2ZpdFVubjVVNDU0d00KXkgbK6apDP+zBLqA80vNol7sBhizsGoZ
+            MRgsqwKgfksIYzt6cMA1ZZoGmFHxdwkey4Fs9wXLGBU+1MvUe8IkOA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-11-13T19:31:31Z"
-    mac: ENC[AES256_GCM,data:XuYP46WLcHwYZ1ot/DLdlUYfP0U68eta0Rbge0l3Ku0eYxlTSl9TJuQ+MZIJCOCAFxHO3wc6ZJC/OSE2PhR4CmX+Z2I0Clx6J7x2kYh75eB7QSYpPTvwjw2bC0D4IZIJH6Ox8XqrhFZJWD41gJ9ZOPCuFOj7qAje5luMVdET2fM=,iv:sBYF9lm57WbqsHWbAirQ92ZsQiQ6+1605//qLKYW5iw=,tag:0Xu1y3m0m49pI6hPqSukOg==,type:str]
+    lastmodified: "2024-11-23T23:20:48Z"
+    mac: ENC[AES256_GCM,data:5EN7n9C8V6kuvQmHl0+p1k36ddrUsYpJR8RfqQg2TxounUvKMhCfhgK6b80QubKbNkszS6JKNyLPX5HEgLnnA+6qmwX+gra9ong1GzMH4+FCEjr0OYrQMrCePsHlXFrhIWBw8O49NhiDlrKV/mbLonYC77ysuL19RTSOXc1knjE=,iv:1bZ8QGmKpQiMXJX+Mr/7DOy2cmaPordJvwDrdDsEOjc=,tag:4fmey0aqd5zh3xderKlV+g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
