--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
       loadbalancerMode: shared
       service:
         annotations:
-          lbipam.cilium.io/ips: 192.168.2.205
+          lbipam.cilium.io/ips: 192.168.1.205
     hubble:
       enabled: true
       metrics:
@@ -62,7 +62,7 @@ spec:
         rollOutPods: true
         ingress:
           enabled: true
-          className: internal
+          className: cilium
           annotations:
             cert-manager.io/cluster-issuer: letsencrypt-production
           hosts: [ "hubble.internal.${SECRET_DOMAIN}" ]
