--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -3,9 +3,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-  - ./kube-prometheus-stack
-  - ./loki
-  - ./promtail
+#  - ./kube-prometheus-stack
+#  - ./loki
+#  - ./promtail
   # - ./tempo
 #  - ./kubeshark
   - ./robusta
